feat: add email verification api (#20)
